css/styles.css
@font-face {
    font-family: shapiro-air;
    src: url("../font/shapiro-air.otf");
}

@font-face {
    font-family: halibut-serif-thin;
    src: url("../font/halibut-serif-thin.woff");
}

html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}


/* custom scrollbar */

/* Firefox */
html {
    scrollbar-width: none;
}

/* all other browsers */
::-webkit-scrollbar {
    width: 0;
}

#scrollbar-thumb {
    width: 25px;
    height: auto;
    position: absolute;
    right: 0;
    z-index: 1000;
}

#thumb-container {
    background-color: greenyellow;
    height: 100vh;
    background-color: rgba(145, 226, 232, 0.55);
    width: 12px;
    position: fixed;
    right: 0;
    z-index: 999;
}

/* end custom scrollbar */

h1, h2 {
    font-family: shapiro-air;
    font-weight: 300;
}

p, button {
    font-family: halibut-serif-thin;
}



#section-1-home {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
    z-index: -1;
}


#sprinkles-video {
    width: 100%;
    height: auto;
    margin-top: -200px;
    position: fixed;
    z-index: -10;
    opacity: 0.6;
}

#masthead-logo {
    width: 1350px;
    height: auto;
    margin: 50px 0 -40px 0;


}

#masthead-logo-mobile {
    display: none;
    width: 500px;
    height: auto;
    margin-top: 50px;
    margin-bottom: 10px;
}

.masthead-logo {
    position: relative;
    z-index: -10;
    filter: drop-shadow(8px 5px 0px rgba(61, 193, 210, 0.37));
}

.masthead-donut {
    width: auto;
    height: 200px;
    margin: -65px -30px 0 -30px;

}

.masthead-donut-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

/* donut z-index */
#dm3, #dm5, #db1, #db3, #db5, #db8 {
    z-index: 1;
}

#db4,#db7 {
    z-index: 2;
}

#dm2, #dm5 {
    z-index: -1;
}

#dt1 {
    z-index: -2;
}
/* end donut z-index */

/* donut margins */
#db2 {
    margin-top: -125px;
}

#db4, #db6 {
    margin-top: -80px;
}

#db8 {
    margin-top: -128px;
}

#db9 {
    margin-top: -90px;
}

#dm1 {
    margin-right: -60px;
}

#dm2 {
    margin-top: -120px;
}

#dm3 {
    margin-right: -50px;
}

#dm4 {
    margin-top: -100px;
}

#dt1 {
    margin-bottom: -5px;
}

#dbl, #dbr {
    margin: 0 -20px -70px -20px;
}
/* end donut margins */



#section-2-home {
    z-index: 3;
    margin-top: -100px;
    position: relative;
    height: 675px;

}

#donuts-video {
    width: 100%;
    height: auto;
}

#mobile-donut-sprinkles-bg {
    display: none;
}

#section2-content {
    margin-top: -930px;
    padding-right: 50px;
    text-align: right;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: center;
    height: 100%;
    position: relative;

}

#title {
    font-size: 95px;
    margin-bottom: 10px;
    line-height: 70px;
}

#s2-p {
    font-size: 55px;
    width: 750px;
    line-height: 70px;
}

#section-2-home button {
    background-image: linear-gradient(to right, #a9e2e6, #f6c4e9);
    padding: 12px 70px;
    font-size: 55px;
    border: 1px rgba(245, 223, 240, 0.99) solid;
    border-radius: 10px;
    margin-top: 190px;
    z-index: 10;
    transition: 0.5s ease all;
}

#section-2-home button:hover {
    background-image: linear-gradient(to right, #f6c4e9, #f6c4e9);
    border: 1px rgba(241, 150, 217, 0.99) solid;
    cursor: pointer;
}

#section2-content h1,
#section2-content p {
    z-index: 10;
    pointer-events: none;
}

/* SPRINKLES */

.home-sprinkle {
    width: 120px;
    height: auto;
    transition: all ease 0.5s;
    transform: rotate(0deg);
    position: absolute;
    z-index: 9;
}

/* white */
#sprinkle-1 {
    bottom: 0px;
    right: 40px;
}

#sprinkle-2 {
    bottom: -30px;
    right: 300px;
    transform: rotate(20deg);
}

#sprinkle-3 {
    bottom: 30px;
    right: 400px;
    transform: rotate(50deg);
}

#sprinkle-4 {
    bottom: 200px;
    right: 800px;
    transform: rotate(2deg);
}

#sprinkle-5 {
    bottom: -350px;
    right: 220px;
    transform: rotate(160deg);
}

#sprinkle-6 {
    bottom: 500px;
    right: 770px;
    transform: rotate(250deg);
}

#sprinkle-7 {
    bottom: 420px;
    right: 370px;
    transform: rotate(320deg);
}

#sprinkle-8 {
    bottom: 370px;
    right: 290px;
    transform: rotate(186deg);
}

/* orange */
#sprinkle-9 {
    bottom: 240px;
    right: 0px;
    transform: rotate(220deg);
}

#sprinkle-10 {
    bottom: 310px;
    right: 630px;
    transform: rotate(59deg);
}

#sprinkle-11 {
    bottom: 460px;
    right: 230px;
    transform: rotate(136deg);
}

/* red */
#sprinkle-12 {
    bottom: 100px;
    right: 390px;
    transform: rotate(111deg);
}

#sprinkle-13 {
    bottom: -280px;
    right: 420px;
    transform: rotate(83deg);
}

#sprinkle-14 {
    bottom: -170px;
    right: 610px;
    transform: rotate(145deg);
}

#sprinkle-15 {
    bottom: -100px;
    right: 560px;
    transform: rotate(299deg);
}

/* blue */
#sprinkle-16 {
    bottom: 530px;
    right: 700px;
    transform: rotate(59deg);
}


#sprinkle-17 {
    bottom: 55px;
    right: 420px;
    transform: rotate(129deg);
}


#sprinkle-18 {
    bottom: 322px;
    right: 520px;
    transform: rotate(342deg);
}


#sprinkle-19 {
    bottom: 530px;
    right: 100px;
    transform: rotate(28deg);
}

/* yellow */
#sprinkle-20 {
    bottom: 560px;
    right: 800px;
    transform: rotate(348deg);
}

#sprinkle-21 {
    bottom: 250px;
    right: 760px;
    transform: rotate(264deg);
}

#sprinkle-22 {
    bottom: 10px;
    right: 300px;
    transform: rotate(90deg);
}

#sprinkle-23 {
    bottom: -230px;
    right: 460px;
    transform: rotate(0deg);
}

#sprinkle-24 {
    bottom: -50px;
    right: 660px;
    transform: rotate(34deg);
}

#sprinkle-25 {
    bottom: 550px;
    right: 460px;
    transform: rotate(184deg);
}

#sprinkle-26 {
    bottom: 230px;
    right: 560px;
    transform: rotate(233deg);
}

/* green */
#sprinkle-27 {
    bottom: 490px;
    right: 660px;
    transform: rotate(233deg);
}
/* ... */

